streamlined the generate_biomass function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(filter_by_biomass_type)
 export(filter_type)
 export(fit_model)
 export(gen_biomass)
-export(generate_biomass)
+export(generate_biomass_fun)
 export(generate_biomass_table)
 export(generate_median_biomass)
 export(get_closest_relatives)
