added sanity check function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(obtain_summary_data)
 export(populate_biomass_table)
 export(remove_missing_biomass)
 export(run_linear_models)
+export(sanity_check)
 export(select_category_cols)
 export(standardize_size_categories)
 export(standardize_stages)
