added function to generate a data release for fwdata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(correct_stages)
 export(filter_by_biomass_type)
 export(filter_type)
 export(fit_model)
+export(fwdata_create)
 export(gen_biomass)
 export(generate_biomass_fun)
 export(generate_biomass_table)
