created master functions for creating intermediate data frames in the gen_biomass() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,18 +15,22 @@ export(clean_allometry_matrix)
 export(clean_lengths)
 export(correct_size_categories)
 export(correct_stages)
+export(create_allometry_matrix)
+export(create_biomass_table)
+export(create_category_lookup)
+export(create_equation_bank)
 export(filter_by_biomass_type)
 export(filter_type)
 export(fit_model)
 export(fwdata_create)
 export(gen_biomass)
 export(generate_biomass_fun)
-export(generate_biomass_table)
 export(generate_median_biomass)
 export(get_closest_relatives)
 export(get_median_species)
 export(get_species_ids)
 export(interpolate_biomass)
+export(obtain_biomass_table)
 export(obtain_summary_data)
 export(populate_biomass_table)
 export(remove_missing_biomass)
