added function to remove the file column from the allometry matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(interpolate_biomass)
 export(obtain_biomass_table)
 export(obtain_summary_data)
 export(populate_biomass_table)
+export(remove_file_col)
 export(remove_missing_biomass)
 export(run_linear_models)
 export(sanity_check)
